<resources>
    <string name="app_name">CS3270A3 Pickle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rock_paper_scissors">Rock, Paper Scissors by Cameron Pickle</string>
    <string name="the_phone">The Phone</string>
    <string name="placeholder">________</string>
    <string name="me">Me</string>
    <string name="play">Play</string>
    <string name="score">Score</string>
    <string name="default_value">0</string>
</resources>
