<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    tools:context="com.cmpickle.cs3270a3.TopFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/rock_paper_scissors" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/the_phone"/>

        <TextView
            android:id="@+id/txv_phone_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/placeholder"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txv_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:text="@string/me"/>

        <TextView
            android:id="@+id/txv_me_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/placeholder"/>
    </LinearLayout>

    <!--<GridLayout-->
        <!--android:columnCount="2"-->
        <!--android:rowCount="3"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
            <!--android:layout_column="0"-->
            <!--android:layout_row="0"-->
            <!--android:text="@string/the_phone"/>-->

        <!--<TextView-->
            <!--android:id="@+id/txv_phone_result"-->
            <!--android:layout_column="1"-->
            <!--android:layout_row="0"-->
            <!--android:text="@string/placeholder"/>-->

        <!--<Button-->
            <!--android:layout_column="0"-->
            <!--android:layout_row="1"-->
            <!--android:text="@string/play"/>-->

        <!--<TextView-->
            <!--android:id="@+id/txv_result"-->
            <!--android:layout_column="0"-->
            <!--android:layout_row="1"-->
            <!--android:text=""/>-->

        <!--<TextView-->
            <!--android:layout_column="0"-->
            <!--android:layout_row="2"-->
            <!--android:text="@string/me"/>-->

        <!--<TextView-->
            <!--android:id="@+id/txv_me_result"-->
            <!--android:layout_column="1"-->
            <!--android:layout_row="2"-->
            <!--android:text="@string/placeholder"/>-->
    <!--</GridLayout>-->

</LinearLayout>
